<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:background="#facbcbcb">

    <TextView
        android:text="@string/hello_world"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/description_game"
        android:layout_below="@id/textView"
        android:id="@+id/description"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1_text"
        android:id="@+id/start_button"
        android:layout_marginTop="75dp"
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:textSize="25sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rules"
        android:id="@+id/rules_button"
        android:layout_below="@id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="25sp" />

</RelativeLayout>

