<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#facbcbcb"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@android:color/background_dark">
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView android:text="@string/end_of_game_popup_user_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="25dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffff0000" />

            <Button android:id="@+id/new_game_button"
                android:text="@string/button_new_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffcccccc" />

            <Button android:id="@+id/main_menu_button"
                android:text="@string/button_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffcccccc" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
